fix: title right padding on small devices

--- a/src/app/(home)/_sections/Dwitches.module.css
+++ b/src/app/(home)/_sections/Dwitches.module.css
@@ -115,6 +115,7 @@
 				@media (width <= 640px) {
 					font-size: clamp(5.5rem, -0.6765rem + 32.9412vw, 12.5rem);
 					text-align: center;
+					padding-right: 0;
 				}
 			}
 		}
